--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,16 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Maven Sat</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BXGWYN58ES"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BXGWYN58ES');
+</script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
